--- a/templates/game.html
+++ b/templates/game.html
@@ -25,8 +25,7 @@
   <div id="board"></div>
   <button id="saveBtn">保存游戏</button>
 
-  <!-- 引入库 -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- 引入库（不再包括 jQuery） -->
   <script src="/static/chessboard-1.0.0.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/stockfish@11.0.0/src/stockfish.js"></script>
